Release Notes - Spring Data Solr - Version 1.1 RC1 (Codd)
---------------------------------------------------------
** New Feature
    * [DATASOLR-132] - Add support for Solr functions

** Fix
    * [DATASOLR-104] - SolrTemplate uses wrong URL when there are multiple templates configured for different Solr cores
    * [DATASOLR-128] - Assertations of Parameters to add PivotFields to FacetOptions aren't Being Executed Correctly
    * [DATASOLR-129] - NullPointerException is thrown when using not managed entity for SolrCrudRepository
    * [DATASOLR-130] - geodist() cannot be used in projection
    * [DATASOLR-133] - PartialUpdate not working when try to save an empty Collection in a multivalue field

** Improvement
    * [DATASOLR-122] - Ability to return distance with the returned Solr documents

Release Notes - Spring Data Solr - Version 1.1 M1 (Codd)
--------------------------------------------------------
** Fix
    * [DATASOLR-116] - MappingSolrConverter doesn't honor Solr wildcard rules on read

** Improvement
    * [DATASOLR-99] - Allow defining Solr field name via @Indexed

** New Feature
    * [DATASOLR-113] - Add support for Pivot fields

** Task
    * [DATASOLR-123] - Ensure compatibility with Spring Framework 4.0.0.X
    * [DATASOLR-126] - Release 1.1 M1

Release Notes - Spring Data Solr - Version 1.0 GA - 2013-09-11
--------------------------------------------------------------
** Fix
    * [DATASOLR-62] - Sort parameter passed to a query method is ignored when annotated query is used
    * [DATASOLR-63] - Sort parameter passed to a query method is ignored when query method uses named query
    * [DATASOLR-69] - Registering custom converters via XML
    * [DATASOLR-75] - Criteria.is(Arrays.asList(......)) calls toString() instead of traversing list
    * [DATASOLR-81] - Cannot index Geospatial with solr4
    * [DATASOLR-94] - Joda-Time registered with no check
    * [DATASOLR-98] - MappingSolrConverter does not retain element order when reading property