@@ -1,5 +1,5 @@
-Spring Data Solr 1.1 RC1
-Copyright (c) [2013-2014] Pivotal Inc.
+Spring Data Solr 1.1 GA
+Copyright (c) [2013-2014] Pivotal Software, Inc.
 
 This product is licensed to you under the Apache License, Version 2.0 (the "License").  
 You may not use this product except in compliance with the License.  
